# investing_app

./: .env.example  README.md  agent.md  cli.py  evals.md  main.py  plan.md  pyproject.toml  strategy_examples.md  training.md
agents/: evaluation_agent.py  execution_agent.py  learning_agent.py  risk_agent.py  strategy_agent.py
core/: api_schemas.py  config.py  coordinator.py  db.py  gemini_client.py  learning_state.py  llm.py  logger.py  logging.py  market_data.py  models.py  orchestrator.py  rules.py  security.py  services.py  trading.py  user.py
data/: cache_provider.py  errors.py  finnhub.py  learning_state.json  marketwatch.py  mock_provider.py  provider.py
evaluation/: backtester.py  scorer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
investing_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
logs/: decisions.jsonl
strategies/: sample_strategy.md
tests/: test_agents.py  test_backtester.py  test_finnhub_provider.py  test_rules.py
