[project]
name = "investing_app"
version = "0.1.0"
description = "AI-powered investing system prototype"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "email-validator>=2.1",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "tenacity>=8.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents", "core", "data", "evaluation"]

[tool.pytest.ini_options]
pythonpath = ["."]
